force-app/main/default/objects/OrderProduct__c/OrderProduct__c.object-meta.xml
<CustomObject>
    <label>주문제품</label>
    <nameField>
        <label>제품명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>