force-app/main/default/objects/OrderProduct__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>주문번호</label>
    <referenceTo>OrderHistory__c</referenceTo>
    <relationshipLabel>주문제품</relationshipLabel>
    <relationshipName>HistoryProductNumbers</relationshipName>
    <type>Lookup</type>
</CustomField>