force-app/main/default/objects/OrderProduct__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>제품코드</label>
    <length>18</length>
    <type>Text</type>
</CustomField>