force-app/main/default/objects/OrderProduct__c/fields/ProductQuantity__c.field-meta.xml
<CustomField>
    <fullName>ProductQuantity__c</fullName>
    <label>제품수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>