force-app/main/default/objects/OrderProduct__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>제품타입</label>
    <length>10</length>
    <type>Text</type>
</CustomField>