force-app/main/default/objects/OrderProduct__c/fields/SalePStatus__c.field-meta.xml
<CustomField>
    <fullName>SalePStatus__c</fullName>
    <label>판매상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>판매완료</fullName>
                <default>true</default>
                <label>판매완료</label>
            </value>
            <value>
                <fullName>환불완료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>