force-app/main/default/objects/OrderProduct__c/fields/SalesBranch__c.field-meta.xml
<CustomField>
    <fullName>SalesBranch__c</fullName>
    <formula>OrderNumber__r.SalesBranch__r.Name</formula>
    <label>판매점</label>
    <type>Text</type>
</CustomField>