force-app/main/default/objects/OrderProduct__c/fields/SerialCode__c.field-meta.xml
<CustomField>
    <fullName>SerialCode__c</fullName>
    <label>시리얼코드</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>