force-app/main/default/objects/OrderProduct__c/listViews/AccessoryView.listView-meta.xml
<ListView>
    <fullName>AccessoryView</fullName>
    <columns>OrderNumber__c</columns>
    <columns>NAME</columns>
    <columns>ProductType__c</columns>
    <columns>SalePStatus__c</columns>
    <filterScope>ScopingRule</filterScope>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>주변기기</value>
    </filters>
    <label>주변기기</label>
</ListView>