force-app/main/default/objects/OrderProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OrderNumber__c</columns>
    <columns>NAME</columns>
    <columns>ProductType__c</columns>
    <columns>SalePStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>