force-app/main/default/objects/OrderProduct__c/listViews/LaptopView.listView-meta.xml
<ListView>
    <fullName>LaptopView</fullName>
    <columns>OrderNumber__c</columns>
    <columns>NAME</columns>
    <columns>ProductType__c</columns>
    <columns>SalePStatus__c</columns>
    <filterScope>ScopingRule</filterScope>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>노트북</value>
    </filters>
    <label>노트북</label>
</ListView>